--- a/userprofile/templates/userprofile/profile-edit.html
+++ b/userprofile/templates/userprofile/profile-edit.html
@@ -56,11 +56,11 @@
                     {{profile_form_errors.date_of_birth}}
                 </div>
                 <div class="col-xs-6 col-sm-4">
-                    <label for="id_gender">Gender</label>
+                    <label for="sex">Sex</label>
                     <div>
-                        {{profile_form.gender}}
+                        {{profile_form.sex}}
                     </div>
-                    {{profile_form_errors.gender}}
+                    {{profile_form_errors.sex}}
                 </div>
                 <div class="col-xs-6 col-sm-4">
                     <label for="id_contactNumber">Contact Number<small class="text-muted">(e.g. 09052674902)</small></label>
