--- a/userprofile/templates/userprofile/stats.html
+++ b/userprofile/templates/userprofile/stats.html
@@ -20,14 +20,14 @@
     </button>
     <nav>
         <div class="nav nav-tabs" id="nav-tab" role="tablist">
-            <button class="nav-link active" id="v-pills-profile-tab" data-bs-toggle="tab"
+            <button class="nav-link {% if tab == 'profile' %}active{% endif %}" id="v-pills-profile-tab" data-bs-toggle="tab"
                 data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile"
                 aria-selected="true">Profile</button>
 
-            <button class="nav-link" id="v-pills-career-tab" data-bs-toggle="tab" data-bs-target="#v-pills-career"
+            <button class="nav-link {% if tab == 'career' %}active{% endif %}" id="v-pills-career-tab" data-bs-toggle="tab" data-bs-target="#v-pills-career"
                 type="button" role="tab" aria-controls="v-pills-career" aria-selected="false">Career</button>
 
-            <button class="nav-link" id="v-pills-personality-tab" data-bs-toggle="tab"
+            <button class="nav-link {% if tab == 'personality' %}active{% endif %}" id="v-pills-personality-tab" data-bs-toggle="tab"
                 data-bs-target="#v-pills-personality" type="button" role="tab" aria-controls="v-pills-personality"
                 aria-selected="false">Personality</button>
         </div>
@@ -36,16 +36,16 @@
 
     <div class="tab-content" id="v-pills-tabContent">
         <!-- profile tab -->
-        <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel"
+        <div class="tab-pane fade {% if tab == 'profile' %}show active{% endif %}" id="v-pills-profile" role="tabpanel"
             aria-labelledby="v-pills-profile-tab">
             {% include 'userprofile/partials/tab-profile.html' %}
         </div>
         <!-- career tab -->
-        <div class="tab-pane fade" id="v-pills-career" role="tabpanel" aria-labelledby="v-pills-career-tab">
+        <div class="tab-pane fade {% if tab == 'career' %}show active{% endif %}" id="v-pills-career" role="tabpanel" aria-labelledby="v-pills-career-tab">
             {% include 'userprofile/partials/tab-career.html' %}
         </div>
         <!-- Personality Tab -->
-        <div class="tab-pane fade" id="v-pills-personality" role="tabpanel" aria-labelledby="v-pills-personality-tab">
+        <div class="tab-pane fade {% if tab == 'personality' %}show active{% endif %}" id="v-pills-personality" role="tabpanel" aria-labelledby="v-pills-personality-tab">
             {% include 'userprofile/partials/tab-personality.html' %}
         </div>
     </div>
