Created a group and alter gender to sex

--- a/administration/statistics/templates/statistics/career-section.html
+++ b/administration/statistics/templates/statistics/career-section.html
@@ -12,7 +12,7 @@
                 hx-target="#career-section"                
                 >
                 <option value="1">All</option>
-                <option value="2">Gender</option>
+                <option value="2">Sex</option>
                 <option value="3">College</option>
                 <option value="4">Senior Highschool</option>
                 <option value="5">Junior Highschool</option>
