--- a/administration/statistics/templates/statistics/partials/career_all.html
+++ b/administration/statistics/templates/statistics/partials/career_all.html
@@ -1,5 +1,5 @@
-<!-- Gender -->
-{% include 'statistics/partials/career_gender.html' %}
+<!-- Sex -->
+{% include 'statistics/partials/career_sex.html' %}
 <!-- College -->
 {% include 'statistics/partials/career_college.html' %}
 <!-- Senior Highschool -->
