--- a/administration/statistics/templates/statistics/partials/personality_all.html
+++ b/administration/statistics/templates/statistics/partials/personality_all.html
@@ -1,5 +1,5 @@
-<!-- Gender -->
-{% include 'statistics/partials/personality_gender.html' %}
+<!-- Sex -->
+{% include 'statistics/partials/personality_sex.html' %}
 <!-- College -->
 {% include 'statistics/partials/personality_college.html' %}
 <!-- Senior Highschool -->
