--- a/userprofile/templates/userprofile/partials/tab-personality.html
+++ b/userprofile/templates/userprofile/partials/tab-personality.html
@@ -26,7 +26,7 @@
         </ul>
     </div>
     <div class="col-sm-8 col-xs-12">
-        <div class="chart-container" style="height:100%; width:100%;">
+        <div class="canva-100p mx-auto">
             <canvas id="predictionBarChart"></canvas>
         </div>
         {% include 'stats/personalityTest-scripts/predictionBarChart.html' %}
