--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -71,7 +71,9 @@
                     </a>
                     {% if personality_result %}
                     <div class="mt-2 text-center">
-                        <a class="btn btn-teal btn-sm" href="{% url 'profile:user-stats' profile.user.username profile.user.id 'personality' %}">view result</a>
+                        <a class="btn btn-teal btn-sm"
+                            href="{% url 'profile:user-stats' profile.user.username profile.user.id 'personality' %}">view
+                            result</a>
                     </div>
                     {% endif %}
                 </div>
@@ -80,7 +82,7 @@
                         class="text-center link-teal {% if career_result %}disabled-links{% endif %}">
                         <div>
                             <img
-                            src="https://img.icons8.com/external-itim2101-lineal-color-itim2101/120/000000/external-skills-business-recruitment-itim2101-lineal-color-itim2101-1.png" />
+                                src="https://img.icons8.com/external-itim2101-lineal-color-itim2101/120/000000/external-skills-business-recruitment-itim2101-lineal-color-itim2101-1.png" />
                         </div>
                         <div {% if career_result %} class="text-muted" {% endif %}>
                             Career Test
@@ -88,7 +90,9 @@
                     </a>
                     {% if career_result %}
                     <div class="mt-2 text-center">
-                        <a class="btn btn-teal btn-sm" href="{% url 'profile:user-stats' profile.user.username profile.user.id 'career' %}">view result</a>
+                        <a class="btn btn-teal btn-sm"
+                            href="{% url 'profile:user-stats' profile.user.username profile.user.id 'career' %}">view
+                            result</a>
                     </div>
                     {% endif %}
                 </div>
@@ -112,9 +116,24 @@
                 <div>
                     <div class="m-t-25">
                         <div class="text-center">
+                            <hr>
                             <div>
                                 <p>Help us improve by giving us feedback <a href="{% url 'evaluation:view' %}"
                                         class="link-teal">here</a></p>
+                            </div>
+                            <hr>
+                            <div class="text-center">
+                                <h5>For donation:</h5>
+                                <div style="background-color:#70BAF7">
+                                    <p>Send us gcash here</p>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-center p-3">
+                                    <img src="{% static 'images/gcash/logo.png' %}" alt="Gcash logo" width="20%">
+                                    <div class="text-start ms-3">
+                                        <p>Gcash Number: 097833050</p>
+                                        <p>Name: Jerwin Carreon</p>
+                                    </div>
+                                </div>
                             </div>
                             <hr>
                             <div class="mt-3">
