--- a/userprofile/templates/userprofile/partials/tab-career.html
+++ b/userprofile/templates/userprofile/partials/tab-career.html
@@ -30,16 +30,18 @@
             {{riasec_result.conventional|floatformat:1}}</p>
     </div>
     <div class="col-sm-9 col-xs-6 py-3">
-        <div class="chart-container mx-auto" style="height: 100%; width: 100%">
+        <div class="canva-100p mx-auto">
             <canvas id="pieChart"></canvas>
         </div>
         {% include 'stats/riasec-scripts/piechart.html' %}
     </div>
 </div>
 <div class="row justify-content-center">
-    <div class="chart-container" style="height:100%; width:100%">
+    <div class="canva-100p mx-auto">
         <canvas id="barChart"></canvas>
     </div>
+    {% include 'riasec/scripts/barchart.html' %}
+
 </div>
 <div class="d-flex flex-wrap justify-content-evenly mb-5">
     <div class="m-1">
@@ -79,8 +81,6 @@
     </div>
     {% endif %}
 </div>
-{% include 'riasec/scripts/piechart.html' %}
-{% include 'riasec/scripts/barchart.html' %}
 {% include 'riasec/carousels/top1.html' %}
 {% include 'riasec/carousels/top2.html' %}
 {% include 'riasec/carousels/top3.html' %}
