--- a/administration/organization/templates/organization/modals/list_edu_levels_modal.html
+++ b/administration/organization/templates/organization/modals/list_edu_levels_modal.html
@@ -9,7 +9,7 @@
             <thead>
               <td></td>
               <td class="text-center">
-                <button class="btn btn-danger" data-bs-target="#edu_levels_delete_modal" data-bs-toggle="modal">
+                <button href="#edu_levels_delete_modal" class="btn btn-danger" data-bs-toggle="modal">
                   Delete?
                 </button>
               </td>
