--- a/administration/organization/templates/organization/partials/education_level_options.html
+++ b/administration/organization/templates/organization/partials/education_level_options.html
@@ -1,5 +1,5 @@
 
 <option value="">Select Education Level</option>
 {% for edu_level in edu_levels %}
-<option value="">{{edu_level.name}}</li>
+<option value="{{edu_level.id}}">{{edu_level.name}}</li>
 {% endfor %}
