--- a/administration/organization/templates/organization/partials/edu_levels_list_body.html
+++ b/administration/organization/templates/organization/partials/edu_levels_list_body.html
@@ -1,12 +1,10 @@
-<form id="edu_level_form_delete">
 {% for edu_level in edu_levels %}
     <tr>
         <td>{{edu_level.name}}</td>
         <td>
             <div class="text-center">
-                <input type="checkbox" name="{{edu_level.id}}" class="form-check-input">
+                <input type="checkbox" name="edu_levels_id" class="form-check-input" value="{{edu_level.id}}">
             </div>
         </td>
     </tr>
 {% endfor %}
-</form>
