--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -160,7 +160,7 @@
                                         class="link-teal">here</a></p>
                             </div>
                             <hr>
-                            <div class="text-center">
+                            <!-- <div class="text-center">
                                 <h5>For donation:</h5>
                                 <div style="background-color:#70BAF7">
                                     <p>Send us gcash here</p>
@@ -169,11 +169,11 @@
                                     <img src="{% static 'images/gcash/logo.png' %}" alt="Gcash logo" width="20%">
                                     <div class="text-start ms-3">
                                         <p>Gcash Number: 097833050</p>
-                                        <p>Name: Jerwin Carreon</p>
+                                        <p>Name: J***** C****n</p>
                                     </div>
                                 </div>
-                            </div>
-                            <hr>
+                            </div> 
+                            <hr>-->
                             <div class="mt-3">
                                 <br>
                                 <h5>Looking for a game to play?</h5>
@@ -204,7 +204,7 @@
                                 </div>
                                 <img src="{% static 'icons/gmail.png' %}" alt="email icon" class="svg-22">
                                 <span>
-                                    psytestjmc@gmail.com
+                                    psytest.jmcfi@jmc.edu.ph
                                 </span>
                             </div>
                         </div>
