--- a/iqtest/templates/iqtest/partials/test_container.html
+++ b/iqtest/templates/iqtest/partials/test_container.html
@@ -1,25 +1,37 @@
 {% load static %}
-<form action="{% url 'iqtest:submit-test' %}"  method="post" id="submit_form">
-    {% csrf_token %}
-    {% for question in questions %}
-    <div>
-        <div class="d-flex my-2">
-            <span>{{forloop.counter}}.)&nbsp;</span>
-            {{question.question.html|safe}}
-        </div>
-        {% for choice in question.choices.all %}
-        <div class="form-check mx-4">
-            <input class="form-check-input" type="radio" name="{{question.id}}" id="{{choice.id}}" value="{{choice.id}}:{{choice.is_answer}}"
-                required>
-            <label for="{{choice.id}}">{{choice.choice.html|safe}}</label>
-        </div>
-        {% endfor %}
+<form action="{% url 'iqtest:submit-test' %}" method="post" id="submit_form">
+  {% csrf_token %} {% for question in questions %}
+  <div>
+    <div class="row my-2">
+      <div class="col-1">
+        <span>{{forloop.counter}}.)&emsp;</span>
+      </div>
+      <div class="col-11">{{question.question.html|safe}}</div>
+    </div>
+    {% for choice in question.choices.all %}
+    <div class="form-check mx-4">
+      <input
+        class="form-check-input"
+        type="radio"
+        name="{{question.id}}"
+        id="{{choice.id}}"
+        value="{{choice.id}}:{{choice.is_answer}}"
+        required
+      />
+      <label for="{{choice.id}}">{{choice.choice.html|safe}}</label>
     </div>
     {% endfor %}
-    <hr>
-    <div class="d-flex flex-column p-2 justify-content-center">
-        <input id='submit' type="submit" class="btn btn-teal btn-lg btn-block" value="Submit">
-    </div>
+  </div>
+  {% endfor %}
+  <hr />
+  <div class="d-flex flex-column p-2 justify-content-center">
+    <input
+      id="submit"
+      type="submit"
+      class="btn btn-teal btn-lg btn-block"
+      value="Submit"
+    />
+  </div>
 </form>
 
 <script src="{% static 'scripts/timer.js' %}" defer></script>
