--- a/templates/awesome.html
+++ b/templates/awesome.html
@@ -1,3 +1,4 @@
+
 {% extends 'base.html' %}
 {% load static %}
 
@@ -13,6 +14,13 @@ Well done!
 <main class="container center">
     <div class="text-center mx-auto">
         <div class="text-center">
+            
+            {% if personality and riasec and iq %}
+            <div class="text-center mt-5 pt-5">
+                    <img src="{% static 'images/congrats.svg' %}" alt="" class="logo-150">
+                    <h3 class="mt-4">Congratulations! You completed all tests...</h3>
+                </div>
+            {% else %}
             <p class="fs-20">
                 <span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#008080" class="bi bi-check-circle" viewBox="0 0 16 16">
@@ -41,9 +49,9 @@ Well done!
                         </a>
                     </div>
                     {% endif %}
-                    {% if not career %}
+                    {% if not riasec %}
                     <div class="border-2-round-box p-4 m-2">
-                        <a href="{% url 'consent' 'career' %}"
+                        <a href="{% url 'consent' 'riasec' %}"
                             class="text-center link-teal">
                             <div>
                                 <img
@@ -55,7 +63,7 @@ Well done!
                         </a>
                     </div>
                     {% endif %}
-                    {% if not iq %}
+                   {% if not iq %}
                     <div class="border-2-round-box p-4 m-2">
                         <a href="{% url 'consent' 'iq' %}"
                             class="text-center link-teal">
@@ -68,10 +76,12 @@ Well done!
                             </div>
                         </a>
                     </div>
-                    {% endif %}
+                    {% endif %} 
                 </div>
             </div>
         </div>
     </div>
 </main>
+{% endif %}
 {% endblock %}
+
