--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,60 +1,65 @@
-{% extends "base.html" %}
-{% load static %}
-
-{% block title %}Home{% endblock %}
-
+{% extends "base.html" %} {% load static %} {% block title %}Home{% endblock %}
 {% block content %}
-<header>
-    {% include 'partials/_navbar.html' %}
-</header>
+<header>{% include 'partials/_navbar.html' %}</header>
 <main class="conainer-fluid">
-    {% if messages %}
-    <div class="bg-success text-white text-center">
-        {% for message in messages %}
-        {{message}}
-        {% endfor %}
-    </div>
-    {% endif %}
-    <!-- Banner -->
-    <div class="row m-0 bg-main">
-        <section class=" p-5 m-0">
-            <div class="d-flex justify-content-center align-self-center">
-                <div class="text-center">
-                    <img src="{% static 'images/jmcseal.png' %}" alt="" class="logo-100">
-                    <img src="{% static 'images/cite.png' %}" alt="" class="logo-100">
-                    <img src="{% static 'images/psychology.png' %}" alt="" class="logo-100">
-                    <div class="text-center">
-                        <header>
-                            <h1 class="fs-60 color-teal">Welcome!</h1>
-                        </header>
-                        <p class="fs-17 color-teal">Take a psychological test</p>
-                        <a href="{% url 'assessment' %}" class="btn btn-teal mt-3">Click here</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
+  {% if messages %}
+  <div class="bg-success text-white text-center">
+    {% for message in messages %} {{message}} {% endfor %}
+  </div>
+  {% endif %}
+  <!-- Banner -->
+  <div class="row m-0 bg-main">
+    <section class="p-5 m-0">
+      <div class="d-flex justify-content-center align-self-center">
+        <div class="text-center">
+          <img
+            src="{% static 'images/jmcseal.png' %}"
+            alt=""
+            class="logo-100"
+          />
+          <img src="{% static 'images/cite.png' %}" alt="" class="logo-100" />
+          <img
+            src="{% static 'images/psychology.png' %}"
+            alt=""
+            class="logo-100"
+          />
+          <div class="text-center">
+            <header>
+              <h1 class="fs-60 color-teal">Welcome!</h1>
+            </header>
+            <p class="fs-17 color-teal">Take a psychological test</p>
+            <a href="{% url 'assessment' %}" class="btn btn-teal mt-3"
+              >Click here</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 
-    <section class="banner px-5 py-3" style="background-color: #f5f5dc;">
-        <span class="image object">
-            <img class="p-3" src="{% static 'images/decision.svg' %}" alt="" />
-        </span>
-        <div class="content d-flex align-self-center justify-content-center">
-            <h5 class="">Learn what <span style="color: #0b3b5a;">career</span> suites you</h5>
-        </div>
-    </section>
-    <section class="banner px-5" style="background-color: #f5f5f5;">
-        <span class="image object">
-            <img class="p-3" src="{% static 'images/personality.svg' %}" alt="" />
-        </span>
-        <div class="content d-flex align-self-center justify-content-center">
-            <div>
-                <h5 class="">Learn what <span style="color: #0b3b5a;">personality</span> attributes you have</h5>
-            </div>
-        </div>
-    </section>
+  <section class="banner px-5 py-3" style="background-color: #f5f5dc">
+    <span class="image object">
+      <img class="p-3" src="{% static 'images/decision.svg' %}" alt="" />
+    </span>
+    <div class="content d-flex align-self-center justify-content-center">
+      <h5 class="">
+        Learn what <span style="color: #0b3b5a">career</span> suites you
+      </h5>
+    </div>
+  </section>
+  <section class="banner px-5" style="background-color: #f5f5f5">
+    <span class="image object">
+      <img class="p-3" src="{% static 'images/personality.svg' %}" alt="" />
+    </span>
+    <div class="content d-flex align-self-center justify-content-center">
+      <div>
+        <h5 class="">
+          Learn what <span style="color: #0b3b5a">personality</span> attributes
+          you have
+        </h5>
+      </div>
+    </div>
+  </section>
 </main>
-<footer>
-    {% include 'partials/footer.html' %}
-</footer>
+<footer>{% include 'partials/footer.html' %}</footer>
 {% endblock %}
