fixed some issues

--- a/riasec/templates/riasec/partials/test_container.html
+++ b/riasec/templates/riasec/partials/test_container.html
@@ -32,7 +32,7 @@
     <hr>
     {% endfor %}
     <div class="d-flex flex-column p-2 justify-content-center">
-        <inpu type="submit" class="btn riasec-btn btn-lg btn-block" value="Submit">
+        <input type="submit" class="btn riasec-btn btn-lg btn-block" value="Submit">
     </div>
 </form>
 
