--- a/riasec/templates/riasec/test.html
+++ b/riasec/templates/riasec/test.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-<div class="sticky-top row justify-content-center">
+<div class="sticky-top d-flex justify-content-center">
     <div class="col-9 m-3">
         <div class="d-flex justify-content-between">
             <h5>
