--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -6,7 +6,7 @@
 <header>
     {% include 'partials/_navbar.html' %}
 </header>
-<main class="my-2">
+<main class="container-fluid my-2">
     <!-- message alert -->
     <div class="row justify-content-center ">
         <!-- main section -->
