--- a/templates/privacy_consent.html
+++ b/templates/privacy_consent.html
@@ -6,7 +6,7 @@ Privacy Consent
 {% endblock %}
 
 {% block content %}
-<div class="row justify-content-center p-3">
+<div class="d-flex justify-content-center p-3">
     <div class="col-sm-6 col-xs-12 border-1 m-t-75 p-3">
         <div class="text-center">
             <h2>Data Privacy Consent</h2>
