filtered unfinished features

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -63,15 +63,15 @@
                         <small class="separator w-50">or</small>
                     </div>
                     <!-- Social login div -->
-                    <div class="d-flex flex-column">
+                    <!-- <div class="d-flex flex-column"> -->
                         <!-- <a href="{% provider_login_url 'google'%}"  -->
-                        <a href="{% provider_login_url 'google'%}"
+                        <!-- <a href="{% provider_login_url 'google'%}"
                             class="login-google-social social-bg2 flex-c-m mt-2 btn w-100 p-4 rounded-pill"
                             type="button"><img src="{% static 'images/google.png' %}" alt="googleicon" id="google-icon">
                             <span>
                                 Continue with Google
                             </span>
-                        </a>
+                        </a> -->
                         <!--                        <a class="login-google-social social-bg2 flex-c-m mt-2 btn w-100 p-4 rounded-pill" type="button"-->
                         <!--                            data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top"-->
                         <!--                            data-bs-content="Available soon" tabindex="0" data-bs-trigger="focus">-->
@@ -81,7 +81,7 @@
                         <!--                            </span>-->
                         <!--                        </a>-->
                         <!-- href="{% provider_login_url 'facebook' method='js_sdk' %}" -->
-                        <a class="login-fb-social social-bg1 flex-c-m mt-2 btn w-100 p-4 rounded-pill" type="button"
+                        <!-- <a class="login-fb-social social-bg1 flex-c-m mt-2 btn w-100 p-4 rounded-pill" type="button"
                             data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top"
                             data-bs-content="Available soon" tabindex="0" data-bs-trigger="focus">
                             <svg id="fb-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25"
@@ -92,8 +92,8 @@
                             <span>
                                 Continue with Facebook
                             </span>
-                        </a>
-                    </div>
+                        </a> -->
+                    <!-- </div> -->
                 </form>
 
                 <!-- sign up link div -->
