--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -145,7 +145,7 @@
                         <strong>Note:</strong>
                     </p>
                     <ul>
-                        <li>Both tests are needed inorder to validate result.</li>
+                        <!-- <li>The three test are needed inorder to validate result.</li> -->
                         <li>Understand and answer each questions honestly.</li>
                     </ul>
 
@@ -154,11 +154,11 @@
                 <div>
                     <div class="m-t-25">
                         <div class="text-center">
-                            <hr>
+                            <!-- <hr>
                             <div>
                                 <p>Help us improve by giving us feedback <a href="{% url 'evaluation:view' %}"
                                         class="link-teal">here</a></p>
-                            </div>
+                            </div> -->
                             <hr>
                             <!-- <div class="text-center">
                                 <h5>For donation:</h5>
