--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -63,15 +63,14 @@
                         <small class="separator w-50">or</small>
                     </div>
                     <!-- Social login div -->
-                    <!-- <div class="d-flex flex-column"> -->
-                        <!-- <a href="{% provider_login_url 'google'%}"  -->
-                        <!-- <a href="{% provider_login_url 'google'%}"
+                <div class="d-flex flex-column">
+                        <a href="{% provider_login_url 'google'%}"
                             class="login-google-social social-bg2 flex-c-m mt-2 btn w-100 p-4 rounded-pill"
                             type="button"><img src="{% static 'images/google.png' %}" alt="googleicon" id="google-icon">
                             <span>
                                 Continue with Google
                             </span>
-                        </a> -->
+                        </a>
                         <!--                        <a class="login-google-social social-bg2 flex-c-m mt-2 btn w-100 p-4 rounded-pill" type="button"-->
                         <!--                            data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top"-->
                         <!--                            data-bs-content="Available soon" tabindex="0" data-bs-trigger="focus">-->
@@ -93,7 +92,7 @@
                                 Continue with Facebook
                             </span>
                         </a> -->
-                    <!-- </div> -->
+                    </div>
                 </form>
 
                 <!-- sign up link div -->
