added see profile and made user iq tab responsive

--- a/userprofile/templates/userprofile/partials/tab-iq.html
+++ b/userprofile/templates/userprofile/partials/tab-iq.html
@@ -15,7 +15,7 @@
     <h2>Result</h2>
 </div>
 <div class="row justify-content-center">
-    <div class="col-3">
+    <div class="col-sm-3 col-xs-6">
         <ul class="list-group">
             <li class="list-group-item bg-teal text-center text-white">Legend: </li>
             <li class="list-group-item text-center">36-40 Exceptional</li>
