--- a/templates/awesome.html
+++ b/templates/awesome.html
@@ -1,87 +1,100 @@
-
 {% extends 'base.html' %}
-{% load static %}
+{% load static %} 
 
-{% block title %}
-Well done!
-{% endblock %}
+{% block title %} Well done!{%endblock %} 
 
 {% block content %}
-<header>
-    {% include 'partials/_navbar.html' %}
-</header>
+<header>{% include 'partials/_navbar.html' %}</header>
 
 <main class="container center">
-    <div class="text-center mx-auto">
-        <div class="text-center">
-            
-            {% if personality and riasec and iq %}
-            <div class="text-center mt-5 pt-5">
-                    <img src="{% static 'images/congrats.svg' %}" alt="" class="logo-150">
-                    <h3 class="mt-4">Congratulations! You completed all tests...</h3>
-                </div>
-            {% else %}
-            <p class="fs-20">
-                <span>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#008080" class="bi bi-check-circle" viewBox="0 0 16 16">
-                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                        <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
-                      </svg>
-                </span>
-                You completed the {{typeOfTest}}!
-            </p>
-            <div>
-                <div class="text-center m-3">
-                    <h3>Choose your next test</h3>
-                </div>
-                <div class="d-flex justify-content-center">
-                    {% if not personality %}
-                    <div class="border-2-round-box p-4 m-2">
-                        <a href="{% url 'consent' 'personality' %}"
-                            class="text-center link-teal">
-                            <div>
-                                <img
-                                    src="https://img.icons8.com/external-wanicon-lineal-color-wanicon/120/000000/external-psychology-university-courses-wanicon-lineal-color-wanicon.png" />
-                            </div>
-                            <div>
-                                Personality Test
-                            </div>
-                        </a>
-                    </div>
-                    {% endif %}
-                    {% if not riasec %}
-                    <div class="border-2-round-box p-4 m-2">
-                        <a href="{% url 'consent' 'career' %}"
-                            class="text-center link-teal">
-                            <div>
-                                <img
-                                    src="https://img.icons8.com/external-itim2101-lineal-color-itim2101/120/000000/external-skills-business-recruitment-itim2101-lineal-color-itim2101-1.png" />
-                            </div>
-                            <div>
-                                Career Test
-                            </div>
-                        </a>
-                    </div>
-                    {% endif %}
-                   {% if not iq %}
-                    <div class="border-2-round-box p-4 m-2">
-                        <a href="{% url 'consent' 'iq' %}"
-                            class="text-center link-teal">
-                            <div>
-                                <img
-                                src="https://img.icons8.com/external-filled-outline-geotatah/120/null/external-brain-genius-color-filled-outline-geotatah.png" />
-                            </div>
-                            <div>
-                                IQ Test
-                            </div>
-                        </a>
-                    </div>
-                    {% endif %} 
-                </div>
-            </div>
+  <div class="text-center mx-auto">
+    <div class="text-center">
+      {% if personality and riasec and iq %}
+      <div class="text-center mt-5 pt-5">
+        <img src="{% static 'images/congrats.svg' %}" alt="" class="logo-150" />
+        <h3 class="mt-4">
+          Congratulations! You completed all tests.
+          <span
+            ><a
+              href="{% url 'profile:user-stats' request.user.username request.user.id 'profile' %}"
+              class="link-teal"
+              >
+              <u>
+                See profile
+              </u>
+              </a>
+              </span
+          >
+        </h3>      </div>
+      {% else %}
+      <p class="fs-20">
+        <span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="25"
+            height="25"
+            fill="#008080"
+            class="bi bi-check-circle"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+            />
+            <path
+              d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"
+            />
+          </svg>
+        </span>
+        You completed the {{typeOfTest}}!
+      </p>
+      <div>
+        <div class="text-center m-3">
+          <h3>Choose your next test</h3>
         </div>
+        <div class="d-flex justify-content-center">
+          {% if not personality %}
+          <div class="border-2-round-box p-4 m-2">
+            <a
+              href="{% url 'consent' 'personality' %}"
+              class="text-center link-teal"
+            >
+              <div>
+                <img
+                  src="https://img.icons8.com/external-wanicon-lineal-color-wanicon/120/000000/external-psychology-university-courses-wanicon-lineal-color-wanicon.png"
+                />
+              </div>
+              <div>Personality Test</div>
+            </a>
+          </div>
+          {% endif %} {% if not riasec %}
+          <div class="border-2-round-box p-4 m-2">
+            <a
+              href="{% url 'consent' 'career' %}"
+              class="text-center link-teal"
+            >
+              <div>
+                <img
+                  src="https://img.icons8.com/external-itim2101-lineal-color-itim2101/120/000000/external-skills-business-recruitment-itim2101-lineal-color-itim2101-1.png"
+                />
+              </div>
+              <div>Career Test</div>
+            </a>
+          </div>
+          {% endif %} {% if not iq %}
+          <div class="border-2-round-box p-4 m-2">
+            <a href="{% url 'consent' 'iq' %}" class="text-center link-teal">
+              <div>
+                <img
+                  src="https://img.icons8.com/external-filled-outline-geotatah/120/null/external-brain-genius-color-filled-outline-geotatah.png"
+                />
+              </div>
+              <div>IQ Test</div>
+            </a>
+          </div>
+          {% endif %}
+        </div>
+      </div>
     </div>
+  </div>
 </main>
-{% endif %}
-{% endblock %}
-
+{% endif %} {% endblock %}
